BMM author notes.

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,7 @@ The primary author of django-mollie-ideal is Paul Burt
 
 Contributors
 <h.vanderheide@intellimedia.nl>
+
+Bitmymoney contributors
+Maurits van Rees <maurits@vanrees.org>
+Guido Wesdorp <johnnydebris@gmail.com>
